--- a/client/internal/objects_torneios.scss
+++ b/client/internal/objects_torneios.scss
@@ -3,30 +3,25 @@
     background-attachment: fixed;
     background-position: 120% 75%;
     background-size: 50%;
-
     * {
         &.success {
             color: $successColor;
         }
     }
-
     h1 {
         color: $primaryColor;
     }
-
     small {
         line-height: normal;
     }
-
-    .bs-tooltip-auto[data-popper-placement^=bottom] .tooltip-arrow::before, 
+    .bs-tooltip-auto[data-popper-placement^=bottom] .tooltip-arrow::before,
     .bs-tooltip-bottom .tooltip-arrow::before {
         border-bottom-color: $infoColor;
     }
-    
-    .tooltip-inner {
+    .tooltip-inner,
+    .beautifier {
         background-color: $infoColor;
     }
-
     .imagemTorneio {
         height: 100vh;
         background: url("http://www.bgbh.com.br/images/torneios/parallax/draftosaurus.jpg");
@@ -34,29 +29,23 @@
         background-position: center top;
         background-repeat: no-repeat;
     }
-
     .icone-xs {
         font-size: $fontSizeXSmall;
         color: $secondaryColor;
         cursor: pointer;
     }
-
     .icone-lg {
         font-size: 3rem;
     }
-
     .icone-xg {
         font-size: 5rem;
     }
-
     .configAdicionais {
         padding-left: 20px;
     }
-
     footer {
         background: transparentize($secondaryColor, 0.7);
     }
-
     .etapasClassificatorias,
     .semifinal,
     .faseFinal {
@@ -64,37 +53,29 @@
         border: 1px solid $infoColor;
         border-radius: 10px;
     }
-
     .comoJogar {
         background: transparentize($color: $secondaryColor, $amount: 0.7);
         padding: 35px 0;
     }
-
     .wrapperRegras {
         flex-direction: column;
-
         .video-regras:last-child {
             margin-top: 20px;
         }
     }
-
     @media screen and (min-width: 992px) {
         .imagemTorneio {
             height: 70vh;
-
             .fill-image {
                 min-width: 100%;
                 max-height: 100%;
             }
         }
-
         .configAdicionais {
             padding-left: 60px;
         }
-
         .wrapperRegras {
             flex-direction: row;
-
             .video-regras:last-child {
                 margin-top: 0;
             }
