--- a/client/sass/styles.scss
+++ b/client/sass/styles.scss
@@ -5,6 +5,7 @@
 @import "5_objects/5_objects";
 @import "6_components/6_components";
 @import "7_trumps/7_trumps";
+@import "../internal/reviews.scss"
 
 /*
 
