--- a/client/internal/reviews.scss
+++ b/client/internal/reviews.scss
@@ -1,12 +1,17 @@
 .reviews {
     &.brazilImperial {
         .imagemReview {
-            height: 100vh;
-            background: url("http://meeplebr.com/wp-content/uploads/2020/09/Capa-Blog.png");
+            height: 70vh;
+            background: url("http://bgbh.com.br/images/reviews/brazilImperial/capa-Brazil-Imperial.png");
             background-attachment: fixed;
-            background-position: center 85px;
             background-repeat: no-repeat;
             background-size: cover;
+            background-position: center -80px;
+        }
+        @media screen and (min-width: 992px) {
+            .imagemReview {
+                background-position: center -175px;
+            }
         }
     }
 }
