Atualização lista de troca e sorteio especial torneio

--- a/client/sass/1_settings/_1_settings.scss
+++ b/client/sass/1_settings/_1_settings.scss
@@ -47,6 +47,6 @@ $sectionYSpacer: 40px;
 $sectionYSpacerMobile: 25px;
 
 // PATTERNS
-$whitePattern: "http://www.bgbh.com.br/patterns/bgbh_white.png";
+$whitePattern: "http://www.bgbh.com.br/patterns/bgbh_white2.png";
 $blackPattern: "http://www.bgbh.com.br/patterns/bgbh_black.png";
 $greenPattern: "http://www.bgbh.com.br/patterns/bgbh_green.png";
