--- a/client/sass/6_components/_6_components.scss
+++ b/client/sass/6_components/_6_components.scss
@@ -8,6 +8,10 @@
             display: flex;
             flex-direction: column;
             justify-content: space-around;
+
+            @media screen and (max-width: 767px) {
+                text-align: center;
+            }
         }
     }
     &.card-grupos {
@@ -41,6 +45,11 @@
             }
         }
     }
+}
+
+.alert-danger.boxAtencao {
+    border-radius: 10px;
+    background-color: transparent;
 }
 
 .primaryButton {
