Ajuste data limite de jogos na lista

--- a/assets/styles/itcss/1_settings/_1_settings.scss
+++ b/assets/styles/itcss/1_settings/_1_settings.scss
@@ -13,6 +13,7 @@ $addedTodayColor: #fcff5c;
 $addedMoreRecentlyColor: #ffedba;
 $addedRecentlyColor: #fdf4da;
 $addedLongTimeColor: #ff9f9f;
+$addedExtraLongTimeColor: #673409;
 // COLORS TORNEIOS
 $primaryColorTournament: #f9911a;
 $secondaryColorTournament: #673409;
