--- a/assets/styles/itcss/9_lista/lista.scss
+++ b/assets/styles/itcss/9_lista/lista.scss
@@ -37,6 +37,9 @@
         &.added-longtime {
             background-color: transparentize($addedLongTimeColor, 0.4);
         }
+        &.added-extra-longtime {
+            background-color: transparentize($addedExtraLongTimeColor, 0.4);
+        }
         &.square {
             border: 1px solid $darkColor;
         }
