--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,16 +1,16 @@
 @use "tailwindcss/base";
 @use "tailwindcss/components";
 @use "tailwindcss/utilities";
-@use 'animate.css';
+@use "animate.css";
 
 .parallax-effect {
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .header-home {
-    background-image: url('@/img/geral/bgbh-topo-site.jpg');
-    @extend .parallax-effect
+  background-image: url("@/img/geral/bgbh-topo-site.jpg");
+  @extend .parallax-effect;
 }
