Paginas Math Trade e og tags

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,3 +22,12 @@
   background: #000000;
   clip-path: polygon(0 54%, 31% 54%, 31% 0, 69% 0, 69% 54%, 100% 54%, 50% 100%);
 }
+
+#cronograma_mathtrade, #grupos_mathtrade {
+  background: transparent url(https://bgbh.com.br/patterns/bgbh_green.png);
+  background-position: 50% 50%;
+  background-size: auto;
+  background-repeat: repeat;
+  background-attachment: fixed;
+  padding: 24px 12px;
+}
